artifacts directory updated 2

--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2363,7 +2363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2373,10 +2373,17 @@
     "# os.makedirs('artifacts', exist_ok=True)\n",
     "# \n",
     "# pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
-    "pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
-    "#pickle.dump(final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
-    "#pickle.dump(book_pivot, open('artifacts/book_pivot.pkl', 'wb'))"
+    "#pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
+    "#pickle.dump(my_final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
+    "pickle.dump(book_pivot, open('artifacts/book_pivot.pkl', 'wb'))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
