--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2363,19 +2363,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import os\n",
-    "# import pickle\n",
-    "# \n",
-    "# os.makedirs('artifacts', exist_ok=True)\n",
-    "# \n",
-    "# pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
-    "#pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
-    "#pickle.dump(my_final_rating, open('artifacts/final_rating.pkl', 'wb'))\n",
+    "import os\n",
+    "import pickle\n",
+    "\n",
+    "os.makedirs('artifacts', exist_ok=True)\n",
+    "\n",
+    "pickle.dump(model, open('artifacts/model.pkl', 'wb'))\n",
+    "pickle.dump(books_name, open('artifacts/books_name.pkl', 'wb'))\n",
+    "pickle.dump(my_final_rating, open('artifacts/my_final_rating.pkl', 'wb'))\n",
     "pickle.dump(book_pivot, open('artifacts/book_pivot.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend_book(book_name):\n",
+    "    book_id = np.where(book_pivot.index == book_name)[0][0]\n",
+    "    distance, suggestion = model.kneighbors(book_pivot.iloc[book_id,:].values.reshape(1,-1), n_neighbors=6)\n",
+    "\n",
+    "    for i in range(len(suggestion)):\n",
+    "        books = book_pivot.index[suggestion[i]]\n",
+    "        for j in books:\n",
+    "            print(j)"
    ]
   },
   {
