--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2396,6 +2396,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A Bend in the Road\n",
+      "Exclusive\n",
+      "The Cradle Will Fall\n",
+      "No Safe Place\n",
+      "Family Album\n",
+      "Lake Wobegon days\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend_book(book_name = 'A Bend in the Road')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
