--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2438,6 +2438,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter and the Chamber of Secrets (Book 2)\n",
+      "Harry Potter and the Goblet of Fire (Book 4)\n",
+      "Harry Potter and the Prisoner of Azkaban (Book 3)\n",
+      "Harry Potter and the Sorcerer's Stone (Book 1)\n",
+      "Exclusive\n",
+      "The Cradle Will Fall\n"
+     ]
+    }
+   ],
+   "source": [
+    "recommend_book('Harry Potter and the Chamber of Secrets (Book 2)')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
