--- a/data/BooksRecommender.ipynb
+++ b/data/BooksRecommender.ipynb
@@ -2468,7 +2468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "bookRec_env",
    "language": "python",
    "name": "python3"
   },
